After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697365 - Fix usage of hasmntopt in gunixmounts.c
Fix usage of hasmntopt in gunixmounts.c
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-04-05 15:18 UTC by Lionel Landwerlin
Modified: 2013-04-07 06:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Flag hasmntopt correctly (872 bytes, patch)
2013-04-05 15:18 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2013-04-05 15:18:00 UTC
One call is not properly flagged.
Comment 1 Lionel Landwerlin 2013-04-05 15:18:49 UTC
Created attachment 240758 [details] [review]
Flag hasmntopt correctly
Comment 2 Emmanuele Bassi (:ebassi) 2013-04-06 10:02:55 UTC
Review of attachment 240758 [details] [review]:

looks okay to me