gunixmounts: correctly flag hasmntopt usage

https://bugzilla.gnome.org/show_bug.cgi?id=697365